# cpp-utilities

./: CMakeLists.txt  Doxyfile  README.md  generateDocs.sh  runTests.sh
include/: filePathUtils.h  fileSystemUtils.h  filesystemUtils.h  hashUtils.h  numberUtils.h  osMemoryUtils.h  stringUtils.h  vfxTimeUtils.h
tests/src/: debugUtils.cpp  filePathUtils.cpp  fileSystemUtils.cpp  filesystemUtils.cpp  hashUtils.cpp  numberUtils.cpp  osMemoryUtils.cpp  stringUtils.cpp  vfxTimeUtils.cpp
